fix|brochure button: correctly align left/right

--- a/css/style.scss
+++ b/css/style.scss
@@ -493,9 +493,8 @@ footer {
 }
 .brochure-download {
 	margin: 15px 0;
-	text-align: right;
-	@media (max-width: 768px) {
-		text-align: left;
+	@media (min-width: 768px) {
+		float: right;
 	}
 }
 .breadcrumbs {
